--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@auth0/auth0-angular": "^2.2.2",
+    "@auth0/auth0-spa-js": "^2.1.3",
     "bcrypt": "^5.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
