--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@auth0/auth0-spa-js": "^2.1.3",
     "bcrypt": "^5.1.1",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
