--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/forms": "^17.0.0",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/router": "^17.0.0",
+    "@angular/animations": "17.0.5",
+    "@angular/common": "17.0.5",
+    "@angular/compiler": "17.0.5",
+    "@angular/core": "17.0.5",
+    "@angular/forms": "17.0.5",
+    "@angular/platform-browser": "17.0.5",
+    "@angular/platform-browser-dynamic": "17.0.5",
+    "@angular/router": "17.0.5",
     "@auth0/auth0-angular": "^2.2.2",
     "@auth0/auth0-spa-js": "^2.1.3",
     "bcrypt": "^5.1.1",
@@ -25,7 +25,7 @@
     "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
-  },
+},
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.3",
     "@angular/cli": "^17.0.3",
