--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "pokemon-draftzone-client",
-  "version": "0.0.0",
+  "version": "0.5.1",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "dev": "ng serve --configuration=development",
+    "prod": "ng serve",
+    "build": "ng build"
   },
   "private": true,
   "dependencies": {
