--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@auth0/auth0-spa-js": "^2.1.3",
     "auth0-lock": "^12.4.0",
     "bcrypt": "^5.1.1",
+    "moment-timezone": "^0.5.45",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
