Replace moment with dayjs

--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "allowedCommonJsDependencies": ["dayjs"],
             "outputPath": "dist/pokemon-draftzone-client",
             "index": "src/index.html",
             "browser": "src/main.ts",
