--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@auth0/auth0-spa-js": "^2.1.3",
     "auth0-lock": "^12.4.0",
     "bcrypt": "^5.1.1",
+    "d3": "^7.9.0",
     "dayjs": "^1.11.11",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.1",
@@ -32,6 +33,7 @@
     "@angular/cli": "17.0.5",
     "@angular/compiler-cli": "17.0.5",
     "@types/auth0-lock": "^11.27.9",
+    "@types/d3": "^7.4.3",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
