update draft forms

--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "ts-node": "^10.9.2",
     "tw-colors": "^3.3.1",
     "typescript": "~5.5.4"
   }
