--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "18.2.8",
-    "@angular/cdk": "^18.2.9",
-    "@angular/common": "18.2.8",
-    "@angular/compiler": "18.2.8",
-    "@angular/core": "18.2.8",
-    "@angular/forms": "18.2.8",
-    "@angular/platform-browser": "18.2.8",
-    "@angular/platform-browser-dynamic": "18.2.8",
-    "@angular/router": "18.2.8",
+    "@angular/animations": "19.0.0",
+    "@angular/cdk": "^19.0.0",
+    "@angular/common": "19.0.0",
+    "@angular/compiler": "19.0.0",
+    "@angular/core": "19.0.0",
+    "@angular/forms": "19.0.0",
+    "@angular/material": "^19.0.0",
+    "@angular/platform-browser": "19.0.0",
+    "@angular/platform-browser-dynamic": "19.0.0",
+    "@angular/router": "19.0.0",
     "@auth0/auth0-angular": "^2.2.2",
     "@auth0/auth0-spa-js": "^2.1.3",
     "auth0-lock": "^12.4.0",
@@ -27,12 +28,12 @@
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.9",
-    "@angular/cli": "18.2.9",
-    "@angular/compiler-cli": "18.2.8",
+    "@angular-devkit/build-angular": "^19.0.0",
+    "@angular/cli": "19.0.0",
+    "@angular/compiler-cli": "19.0.0",
     "@types/auth0-lock": "^11.27.9",
     "@types/d3": "^7.4.3",
     "@types/jasmine": "~5.1.0",
