--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/13luken.ico", "src/assets"],
-            "styles": ["src/styles.css"],
+            "styles": ["src/styles/styles.scss", "src/styles/app-theme.scss"],
             "scripts": []
           },
           "configurations": {
@@ -85,11 +85,16 @@
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": ["src/13luken.ico", "src/assets"],
-            "styles": ["src/styles.css"],
+            "styles": ["src/styles/styles.scss", "src/styles/app-theme.scss"],
             "scripts": []
           }
         }
       }
+    }
+  },
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss"
     }
   },
   "cli": {
