update scss theming

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "sass": "^1.83.4",
     "ts-node": "^10.9.2",
     "tw-colors": "^3.3.1",
     "typescript": "~5.5.4"
