--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/13luken.ico", "src/assets"],
+            "assets": ["src/manifest.webmanifest", "src/assets"],
             "styles": ["src/styles/styles.scss", "src/styles/app-theme.scss"],
             "scripts": []
           },
@@ -37,7 +37,8 @@
                   "maximumError": "10kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
