--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -26,5 +26,17 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "api",
+      "urls": ["api.pokemondraftzone.com/*"],
+      "cacheConfig": {
+        "maxSize": 200,
+        "maxAge": "2d",
+        "timeout": "2s",
+        "strategy": "freshness"
+      }
+    }
   ]
 }
