--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "bcrypt": "^5.1.1",
     "d3": "^7.9.0",
     "dayjs": "^1.11.11",
+    "marked": "^15.0.7",
+    "ngx-markdown": "^19.1.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
@@ -42,6 +44,7 @@
     "@types/d3": "^7.4.3",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
+    "@types/marked": "^6.0.0",
     "jasmine-core": "~5.1.0",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.4.2",
