--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular-devkit/build-angular": "^19.0.0",
     "@angular/cli": "19.2.9",
     "@angular/compiler-cli": "19.2.8",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/auth0-lock": "^11.27.9",
     "@types/d3": "^7.4.3",
     "@types/jasmine": "~5.1.0",
