--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "marked": "^15.0.7",
     "ngx-markdown": "^19.1.1",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
