remove pick dynamically

--- a/angular.json
+++ b/angular.json
@@ -29,12 +29,12 @@
                 {
                   "type": "initial",
                   "maximumWarning": "3MB",
-                  "maximumError": "10MB"
+                  "maximumError": "50mb"
                 },
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kb",
-                  "maximumError": "10kb"
+                  "maximumError": "50kb"
                 }
               ],
               "outputHashing": "all",
