--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,15 +1,20 @@
 # This file is used by the build system to adjust CSS and JS output to support the specified browsers below.
+
 # For additional information regarding the format and rule options, please see:
+
 # https://github.com/browserslist/browserslist#queries
 
 # For the full list of supported browsers by the Angular framework, please see:
+
 # https://angular.dev/reference/versions#browser-support
 
 # You can see what browsers were selected by your queries by running:
-#   npx browserslist
 
-> 0.5%
-last 2 versions
+# npx browserslist
+
+last 2 Chrome versions
+last 2 Firefox versions
+last 2 Edge versions
+last 2 Safari versions
+last 2 iOS versions
 Firefox ESR
-not dead
-
