--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "20.3.0",
+    "@angular/animations": "21.0.5",
     "@angular/cdk": "^20.2.2",
-    "@angular/common": "20.3.0",
-    "@angular/compiler": "20.3.0",
-    "@angular/core": "20.3.0",
-    "@angular/forms": "20.3.0",
+    "@angular/common": "21.0.5",
+    "@angular/compiler": "21.0.5",
+    "@angular/core": "21.0.5",
+    "@angular/forms": "21.0.5",
     "@angular/material": "^20.2.2",
-    "@angular/platform-browser": "20.3.0",
-    "@angular/platform-browser-dynamic": "20.3.0",
-    "@angular/router": "20.3.0",
-    "@angular/service-worker": "20.3.0",
+    "@angular/platform-browser": "21.0.5",
+    "@angular/platform-browser-dynamic": "21.0.5",
+    "@angular/router": "21.0.5",
+    "@angular/service-worker": "21.0.5",
     "@auth0/auth0-angular": "^2.2.2",
     "@auth0/auth0-spa-js": "^2.1.3",
     "auth0-lock": "^14.0.0",
@@ -39,9 +39,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.3.0",
-    "@angular/cli": "20.3.0",
-    "@angular/compiler-cli": "20.3.0",
+    "@angular/build": "^21.0.3",
+    "@angular/cli": "21.0.3",
+    "@angular/compiler-cli": "21.0.5",
     "@k-vyn/coloralgorithm": "^1.2.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/auth0-lock": "^11.27.9",
