--- a/package.json
+++ b/package.json
@@ -13,25 +13,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "21.0.5",
-    "@angular/cdk": "^20.2.2",
-    "@angular/common": "21.0.5",
-    "@angular/compiler": "21.0.5",
-    "@angular/core": "21.0.5",
-    "@angular/forms": "21.0.5",
-    "@angular/material": "^20.2.2",
-    "@angular/platform-browser": "21.0.5",
-    "@angular/platform-browser-dynamic": "21.0.5",
-    "@angular/router": "21.0.5",
-    "@angular/service-worker": "21.0.5",
+    "@angular/cdk": "^21.0.6",
+    "@angular/common": "^21.0.6",
+    "@angular/compiler": "^21.0.6",
+    "@angular/core": "^21.0.6",
+    "@angular/forms": "^21.0.6",
+    "@angular/material": "^21.0.6",
+    "@angular/platform-browser": "^21.0.6",
+    "@angular/platform-browser-dynamic": "^21.0.6",
+    "@angular/router": "^21.0.6",
+    "@angular/service-worker": "^21.0.6",
     "@auth0/auth0-angular": "^2.2.2",
     "@auth0/auth0-spa-js": "^2.1.3",
     "auth0-lock": "^14.0.0",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "d3": "^7.9.0",
     "dayjs": "^1.11.11",
-    "marked": "^16.2.1",
-    "ngx-markdown": "^20.1.0",
+    "marked": "^17.0.0",
+    "ngx-markdown": "^21.1.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.1",
@@ -39,16 +38,15 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.3",
-    "@angular/cli": "21.0.3",
-    "@angular/compiler-cli": "21.0.5",
+    "@angular/build": "^21.0.6",
+    "@angular/cli": "^21.0.6",
+    "@angular/compiler-cli": "^21.0.6",
     "@k-vyn/coloralgorithm": "^1.2.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/auth0-lock": "^11.27.9",
     "@types/d3": "^7.4.3",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
-    "@types/marked": "^6.0.0",
     "jasmine-core": "~5.1.0",
     "jest": "^30.2.0",
     "jest-preset-angular": "^16.0.0",
@@ -61,7 +59,6 @@
     "prettier-plugin-tailwindcss": "^0.6.9",
     "sass": "^1.83.4",
     "ts-node": "^10.9.2",
-    "tw-colors": "^3.3.1",
     "typescript": "~5.9.2"
   }
 }
