--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@auth0/auth0-angular": "^2.2.2",
     "@auth0/auth0-spa-js": "^2.1.3",
     "auth0-lock": "^14.0.0",
+    "aws-rum-web": "^2.0.0",
     "bcrypt": "^6.0.0",
     "d3": "^7.9.0",
     "dayjs": "^1.11.11",
